# advancescan

./: .gitignore  AUTHORS  BUILD  HISTORY  INSTALL  Makefile.am  Makefile.in  README  advdiff.1  advmng.1  advpng.1  advscan.1  advscan.rc.dos  advscan.rc.linux  advzip.1  analyze.cc  analyze.h  autogen.sh  check.lst  compress.cc  compress.h  conf.cc  conf.h  config.h.in  configure  configure.ac  configure.dos  configure.msdos  configure.windows  configure.windows-x86  diff.cc  disk.cc  disk.h  error.h  except.h  file.cc  file.h  game.cc  game.h  gamediff.cc  (+36 more)
7z/: 7z.h  7zdeflate.cc  7zlzma.cc  IInOutStreams.h
doc/: advdiff.1  advdiff.d  advdiff.html  advdiff.txt  advmng.1  advmng.d  advmng.html  advmng.txt  advpng.1  advpng.d  advpng.html  advpng.txt  advscan.1  advscan.d  advscan.html  advscan.txt  advzip.1  advzip.d  advzip.html  advzip.txt  authors.1  authors.d  authors.html  authors.txt  history.1  history.d  history.html  history.txt  install.1  install.d  install.html  install.txt  readme.1  readme.d  readme.html  readme.txt
expat/: expat-1.95.7.diff
lib/: png.c
test/: test.lst  test.xml  testd.lst  testd.xml
